--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+== 0.2.5 / 2009-05-22
+* Fixed a bug with the stylesheet merger where url( <url> ); (ie URL surrounded
+  by spaces) resolved wrong.
+
 == 0.2.4 / 2009-04-29
 
 * More robust pattern checking for url() references in CSS files
