--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+== 0.2.6 / 2009-07-20
+* New installation paths for YUI Compressor
+  Patch by http://github.com/craveytrain
+
 == 0.2.5 / 2009-05-22
 * Fixed a bug with the stylesheet merger where url( <url> ); (ie URL surrounded
   by spaces) resolved wrong.
