add google closure compiler support

--- a/Readme.rdoc
+++ b/Readme.rdoc
@@ -11,7 +11,7 @@ High level overview; Juicer can
 
 * figure out which files depend on each other and merge them together, reducing
   the number of http requests per page view, thus improving performance
-* use YUI Compressor to compress code, thus improving performance
+* use YUI Compressor or Google Closure Compiler to compress code, thus improving performance
 * verify that your JavaScript is safe to minify/compress by running JsLint on it
 * cycle asset hosts in CSS files
 * add "cache busters" to URLs in CSS files
@@ -24,7 +24,7 @@ High level overview; Juicer can
 
 Juicer can read @import statements in CSS files and use them to combine all your
 stylesheets into a single file. This file may be minified using the YUI
-Compressor. Eventually it will support other minifying tools too.
+Compressor or Google Closure Compiler. Eventually it will support other minifying tools too.
 
 Juicer can treat your JavaScript files much the same way too, parsing a comment
 switch @depend, as this example shows:
@@ -100,17 +100,18 @@ the project on github, or get in touch through christian (at) cjohansen.no.
 
 == REQUIREMENTS:
 
-In order to use YUI Compressor and JsMin (requires Rhino) you need Java
+In order to use YUI Compressor, Closure Compiler or JsMin (requires Rhino) you need Java
 installed and the java executable available on your path.
 
 == INSTALL:
 
   $ gem install juicer
   $ juicer install yui_compressor
+  $ juicer install closure_compiler
   $ juicer install jslint
 
 You need Java installed and available on your PATH. During gem installation,
-Juicer will download and install YUI Compressor, JsLint and Rhino for you.
+Juicer will download and install YUI Compressor, Closure Compiler, JsLint and Rhino for you.
 
 == For developers
 
