Update contributors in readme

--- a/Readme.rdoc
+++ b/Readme.rdoc
@@ -284,6 +284,7 @@ Will tell you about other dependencies that might be missing on your system.
 * Daniel Stockman (http://evocateur.org/)
   Fixed `juicer list` when running it against files with no dependencies
 * Aaron Suggs (http://ktheory.com)
+  Added support for depending on directories
   Fixed installers on 1.0 branch
 
 == LICENSE:
