--- a/Readme.rdoc
+++ b/Readme.rdoc
@@ -69,15 +69,19 @@ Juicer supports so-called cache busters. A cache buster is a pattern in a path
 whose only purpose is to "trick" browsers to redownload a file when it has
 changed in cases where a far future expires header is used.
 
-There are two types of cache busters; soft ones add a parameter to the URL, like
-so: http://assets/images/1.png?cb1234567890, ie the letters "cb" (as in cache
-buster) and then the timestamp of the files mtime.
+There are three types of cache busters.  Soft cache busters (the default) add a
+parameter to the URL, like so: http://assets/images/1.png?jcb=1234567890, ie the 
+letters "jcb" (as in Juicer Cache Buster) and then the timestamp of the files mtime.
+
+Rails cache busters are similar, except they leave out the parameter name.  This
+mimics the behavior of the image_tag helper in the Ruby on Rails framework, so that
+images called from both CSS and from Rails views will have identical URLs.
 
 Unfortunately, the popular web proxy Squid shipped for some time with a default
 configuration which would not treat a URL as a "new" URL if the only thing changed
 was the GET parameters. For this reason Juicer provides hard cache busters.
 
-Hard cache busters result in URLs such as: http://assets/images/1-cb1234567890.png,
+Hard cache busters result in URLs such as: http://assets/images/1-jcb1234567890.png,
 ie URLs that require either renaming of files, or (more conveniently) a web
 server configuration that will forward URLs to the right files anyway.
 
