--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,6 @@
+== 1.0.11 / 2011-05-27
+* Fix downloading of YUI jar, which moved again. Thanks to sterebooster.
+
 == 1.0.10 / 2011-05-11
 * Fix downloading of Rhino jar. Add mechanism for scraping out the
   latest version.
