--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,6 @@
+== 1.0.16 / 2012-05-02
+* Fix problem with image embeds on Windows (Wesley Crossman)
+
 == 1.0.15 / 2012-04-17
 * Fix stupid depend-on-self-issue (again!)
 
